--- a/styles.css
+++ b/styles.css
@@ -41,15 +41,42 @@ body {
   }
   
   .content {
-    display: flex;
-    gap: 20px;
-    
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    align-items: flex-start;
+    justify-content: left;
     margin-left: 250px;
     padding: 20px;
   }
 .box{
-    padding: 2%;
-    border: solid;
-    border-color: red;
-    border-width: 1px;
+  display: flex;
+  flex-direction: column;
+
 }  
+p{
+  margin: 3px;
+}
+.box {
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+}
+
+.box p span {
+  display: inline-block;
+  width: 180px;
+  font-weight: bold; /* Adjust the width as needed */
+}
+.container{
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-rows: 10% 90%;
+}
+.nav{
+  height: 100%;
+  background-color: rgb(170, 169, 169);
+}
+
