--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,63 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .sidebar {
-    height: 100%;
-    width: 250px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #333;
-    padding-top: 20px;
-  }
-  
-  .sidebar h2 {
-    color: #fff;
-    text-align: center;
-  }
-  
-  .sidebar ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .sidebar ul li {
-    padding: 10px 0;
-  }
-  
-  .sidebar ul li a {
-    display: block;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .sidebar ul li a:hover {
-    background-color: #555;
-  }
-  
-  .content {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    align-items: flex-start;
-    justify-content: left;
-    margin-left: 250px;
-    padding: 20px;
-  }
-.box{
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar {
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #333;
+  padding-top: 20px;
+}
+
+.sidebar h2 {
+  color: #fff;
+  text-align: center;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sidebar ul li {
+  padding: 10px 0;
+}
+
+.sidebar ul li a {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+  text-align: center;
+}
+
+.sidebar ul li a:hover {
+  background-color: #555;
+}
+
+.content {
+  display: flex;
+  position: relative;
+  left: 300px;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.box {
   display: flex;
   flex-direction: column;
+  min-width: 350px;
+}
 
-}  
-p{
+p {
   margin: 3px;
 }
+
 .box {
   background-color: #f0f0f0;
   border-radius: 10px;
@@ -67,16 +69,18 @@ p{
 .box p span {
   display: inline-block;
   width: 180px;
-  font-weight: bold; /* Adjust the width as needed */
+  font-weight: bold;
+  /* Adjust the width as needed */
 }
-.container{
+
+.container {
   margin: 0;
   padding: 0;
   display: grid;
   grid-template-rows: 10% 90%;
 }
-.nav{
+
+.nav {
   height: 100%;
   background-color: rgb(170, 169, 169);
 }
-
