--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: Arial;
   margin: 0;
   padding: 0;
+  height: 100%;
+
 }
 
 .sidebar {
@@ -68,7 +72,7 @@ p {
 
 .box p span {
   display: inline-block;
-  width: 180px;
+  width: 200px;
   font-weight: bold;
   /* Adjust the width as needed */
 }
@@ -81,6 +85,54 @@ p {
 }
 
 .nav {
+  display: flex;
+  align-items: center;
+  justify-content: start;
   height: 100%;
   background-color: rgb(170, 169, 169);
+}
+.nav-content{
+  position: relative;
+  left: 300px;
+  font-size: 30px;
+  color: black;
+  font-weight: bold;
+  font-family: "Poppins" , Arial;
+}
+
+@media (max-width :800px)
+{
+
+  .container {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .box {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  .nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: rgb(170, 169, 169);
+  }
+  .nav-content{
+    font-size: 30px;
+    color: black;
+    font-weight: bold;
+    font-family: "Poppins" , Arial;
+  }
 }
