--- a/home-u.css
+++ b/home-u.css
@@ -27,20 +27,47 @@
     padding: 10px;
     height: 60px;
     border-radius: 15px;
-    gap: 20px;
+    gap: 10px;
     text-align: center;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .top img {
-    border-radius: 20px;
+    display: flex;
+    background-color: transparent;
+    height: 70px;
+    width: 80px;
+}
+
+.middle{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+    align-items: center;
+}
+.middle-components{
+    display: flex;
+    background-color: #f0f0f0;
+    font-size: 18px;
+    width: 85%;
+    margin-top: 10px;
+    padding: 10px;
+    height: 60px;
+    border-radius: 15px;
+    gap: 4px;
+    text-align: center;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.middle-components img {
     padding: 10px;
     display: flex;
     background-color: transparent;
-    height: 40px;
-    width: 40px;
-    border: 1px solid black;
+    height: 20px;
+    width: 20px;
 }
 
 
