--- a/home-u.css
+++ b/home-u.css
@@ -6,7 +6,7 @@
 
 .main {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
 }
 
 .sidebar {
@@ -15,17 +15,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(250, 250, 250);
 }
 
 .sidebar .top {
     display: flex;
-    background-color: #f0f0f0;
+    background-color: rgb(245, 245, 245);
     font-size: 26px;
     width: 90%;
     margin-top: 10px;
     padding: 10px;
-    height: 60px;
+    height: 50px;
     border-radius: 15px;
     gap: 10px;
     text-align: center;
@@ -49,14 +49,14 @@
 }
 .middle-components{
     display: flex;
-    background-color: #f0f0f0;
-    font-size: 18px;
+    background-color: rgb(245, 245, 245);
+    font-size: 15px;
     width: 85%;
     margin-top: 10px;
     padding: 10px;
-    height: 60px;
+    height: 40px;
     border-radius: 15px;
-    gap: 4px;
+    gap: 2px;
     text-align: center;
     align-items: center;
     justify-content: flex-start;
@@ -68,6 +68,37 @@
     background-color: transparent;
     height: 20px;
     width: 20px;
+}
+
+.bottom{
+    display: flex;
+    background-color: rgb(245, 245, 245);
+    font-size: 15px;
+    width: 85%;
+    margin-top: 10px;
+    padding: 10px;
+    height: 40px;
+    border-radius: 15px;
+    gap: 4px;
+    text-align: center;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+}
+
+.bottom img{
+    padding: 10px;
+    display: flex;
+    background-color: transparent;
+    height: 20px;
+    width: 20px;
+}
+
+.hover-effect:hover{
+    background-color: rgb(235, 235, 235);
+}
+.hover-effect:active{
+    background-color: rgb(225, 225, 225);
 }
 
 
@@ -87,14 +118,11 @@
     padding: 20px;
     background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* Add shadow */
     border-radius: 10px;
     margin-bottom: 20px;
     transition: transform 0.3s ease;
-    /* Add transition for hover effect */
     cursor: pointer;
-    /* Add cursor pointer on hover */
-    height: 200px;
+    height: 100px;
 }
 
 .js-card:hover {
@@ -122,5 +150,4 @@
     margin: 5px 0;
     font-size: 0.9rem;
     color: #777;
-    /* Adjust color */
 }
