--- a/home-u.css
+++ b/home-u.css
@@ -20,8 +20,7 @@
 
 .sidebar .top {
     display: flex;
-    background-color: rgb(245, 245, 245);
-    font-size: 26px;
+    font-size: 24px;
     width: 90%;
     margin-top: 10px;
     padding: 10px;
@@ -102,7 +101,15 @@
 }
 
 
+.container h1{
+    position: fixed;
+    padding-top: 20px;
+    padding-left: 10px;
+    font-weight: 600;
+}
+
 .features {
+    margin-top: 60px;
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -116,7 +123,7 @@
     display: flex;
     align-items: center;
     padding: 20px;
-    background-color: #ffffff;
+    background-color: rgb(250, 250, 250);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     margin-bottom: 20px;
@@ -126,14 +133,17 @@
 }
 
 .js-card:hover {
-    transform: translateY(-5px);
-    /* Add slight lift on hover */
+    transform: translateY(-7px);
+}
+
+.js-card:active{
+    background-color: rgb(245 245, 245);
 }
 
 .js-card img {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    border-radius: 30%;
     object-fit: cover;
     margin-right: 20px;
 }
