--- a/stylesheets/apartment-details.css
+++ b/stylesheets/apartment-details.css
@@ -2,7 +2,10 @@
     padding: 0;
     margin: 0;
 }
-
+.emergency{
+    display: none;
+    background-color: red;
+}
 .main{
     display: flex;
     align-items: center;
