--- a/stylesheets/auth.css
+++ b/stylesheets/auth.css
@@ -18,6 +18,7 @@
     text-align: center;
 }
 .auth-card input{
+    color: white;
     align-self: center;
     padding-left: 10px;
     margin-top: 10px;
@@ -44,4 +45,16 @@
 
 .auth-card button:hover{
     transform: translateY(-3px);
+}
+
+.shake-animation {
+    animation: shake 0.2s ease-in-out; /* Adjust the animation duration and timing function */
+}
+
+@keyframes shake {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-10px); }
+    50% { transform: translateX(10px); }
+    75% { transform: translateX(-5px); }
+    100% { transform: translateX(0); }
 }
