--- a/stylesheets/apartment-details.css
+++ b/stylesheets/apartment-details.css
@@ -1,24 +1,44 @@
-.main{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+    font-family: "Poppins";
+    margin: 0;
+    padding: 0;
+}
+.main {
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 100%;  
+    width: 100%;
     align-items: center;
     justify-content: center;
-
 }
-
-.card {
-    width: 800px;
-    height: 600px;
+.apartment-card {
+    display: flex;
+    flex-direction: column;
+    align-items: self-start;
+    justify-content: center;
+    width: 600px;
+    height: 400px;
+    padding-left: 50px;
     border-radius: 50px;
     background: #e0e0e0;
-    box-shadow: 20px 20px 60px #bebebe,
-                  -20px -20px 60px #ffffff;
-   }
-
+    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+}
 .main h1{
+    margin-top: 20px;
+    margin-bottom: 20px;
     z-index: 1;
     padding-left: 10px;
     font-weight: 600;
+}
+
+.full{
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+
+.mid{
+    margin-top: 10px;
+    font-size: 22px;
 }
